Add codegen changes to new worker impl