@@ -59,69 +59,16 @@ import org.wso2.ballerinalang.compiler.semantics.model.types.BType;
 import org.wso2.ballerinalang.compiler.util.TypeTags;
 import org.wso2.ballerinalang.util.Flags;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
-import static org.objectweb.asm.Opcodes.ACC_STATIC;
-import static org.objectweb.asm.Opcodes.ACONST_NULL;
-import static org.objectweb.asm.Opcodes.ALOAD;
-import static org.objectweb.asm.Opcodes.ARETURN;
-import static org.objectweb.asm.Opcodes.ASTORE;
-import static org.objectweb.asm.Opcodes.DCONST_0;
-import static org.objectweb.asm.Opcodes.DRETURN;
-import static org.objectweb.asm.Opcodes.DSTORE;
-import static org.objectweb.asm.Opcodes.FCONST_0;
-import static org.objectweb.asm.Opcodes.FSTORE;
-import static org.objectweb.asm.Opcodes.GETSTATIC;
-import static org.objectweb.asm.Opcodes.IADD;
-import static org.objectweb.asm.Opcodes.ICONST_0;
-import static org.objectweb.asm.Opcodes.ICONST_1;
-import static org.objectweb.asm.Opcodes.IFEQ;
-import static org.objectweb.asm.Opcodes.IF_ICMPEQ;
-import static org.objectweb.asm.Opcodes.INVOKESTATIC;
-import static org.objectweb.asm.Opcodes.INVOKEVIRTUAL;
-import static org.objectweb.asm.Opcodes.IRETURN;
-import static org.objectweb.asm.Opcodes.ISTORE;
-import static org.objectweb.asm.Opcodes.LCONST_0;
-import static org.objectweb.asm.Opcodes.LRETURN;
-import static org.objectweb.asm.Opcodes.LSTORE;
-import static org.objectweb.asm.Opcodes.PUTSTATIC;
+import static org.objectweb.asm.Opcodes.*;
 import static org.wso2.ballerinalang.compiler.bir.codegen.JvmCodeGenUtil.SCOPE_PREFIX;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmCodeGenUtil.generateReturnType;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmCodeGenUtil.getMethodDescParams;
 import static org.wso2.ballerinalang.compiler.bir.codegen.JvmCodeGenUtil.getModuleLevelClassName;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmConstants.ANNOTATIONS_METHOD_PREFIX;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmConstants.MODULE_ANNOTATIONS_CLASS_NAME;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmConstants.MODULE_INIT_CLASS_NAME;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmConstants.MODULE_STARTED;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmConstants.MODULE_START_ATTEMPTED;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmConstants.NO_OF_DEPENDANT_MODULES;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmConstants.OBJECT_SELF_INSTANCE;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmConstants.PARENT_MODULE_START_ATTEMPTED;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmConstants.STRAND;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmConstants.STRAND_CLASS;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmConstants.STRAND_LOCAL_VARIABLE_NAME;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_ARRAY_VALUE;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_BDECIMAL;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_BOBJECT;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_ERROR_VALUE;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_FUNCTION_POINTER;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_FUTURE_VALUE;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_HANDLE_VALUE;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_MAP_VALUE;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_OBJECT;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_REGEXP;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_STRAND;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_STREAM_VALUE;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_STRING;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_TABLE_VALUE;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_TYPEDESC;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.GET_XML;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.INITIAL_METHOD_DESC;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.UPDATE_CHANNEL_DETAILS;
-import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.VOID_METHOD_DESC;
+import static org.wso2.ballerinalang.compiler.bir.codegen.JvmConstants.*;
+import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.*;
 
 /**
  * BIR function to JVM byte code generation class.
@@ -130,8 +77,6 @@ import static org.wso2.ballerinalang.compiler.bir.codegen.JvmSignatures.VOID_MET
  */
 public class MethodGen {
 
-    protected static final String STATE = "state";
-    private static final String INVOCATION_COUNT = "%invocationCount";
     private final JvmPackageGen jvmPackageGen;
     private final SymbolTable symbolTable;
     private final Types types;
@@ -239,9 +184,7 @@ public class MethodGen {
         String funcName = func.name.value;
         BType retType = getReturnType(func);
         String desc;
-        if (isWorker) {
-            desc = INITIAL_METHOD_DESC + "I" + getMethodDescParams(func.type.paramTypes) + generateReturnType(retType);
-        } else if (isObjectMethodSplit) {
+        if (isObjectMethodSplit) {
             desc = JvmCodeGenUtil.getMethodDesc(func.type.paramTypes, retType, moduleClassName);
         } else {
             desc = JvmCodeGenUtil.getMethodDesc(func.type.paramTypes, retType);
@@ -257,32 +200,66 @@ public class MethodGen {
         genLocalVars(indexMap, mv, func.localVars);
 
         int returnVarRefIndex = getReturnVarRefIndex(func, indexMap, retType, mv);
+        int channelMapVarIndex = getWorkerChannelMapVarIndex(func, indexMap, mv);
+        List<BIRNode.ChannelDetails> sendWorkerChannels = new ArrayList<>();
+        List<BIRNode.ChannelDetails> receiveWorkerChannels = new ArrayList<>();
+        for (BIRNode.ChannelDetails workerChannel : func.workerChannels) {
+            if (workerChannel.send) {
+                sendWorkerChannels.add(workerChannel);
+            } else {
+                receiveWorkerChannels.add(workerChannel);
+            }
+        }
+        int sendWorkerChannelNamesVar = getSendWorkerChannelNamesVarIndex(func, indexMap, mv, sendWorkerChannels);
+        int receiveWorkerChannelNamesVar = getReceiveWorkerChannelNamesVarIndex(func, indexMap, mv,
+                receiveWorkerChannels);
         LabelGenerator labelGen = new LabelGenerator();
 
         // handle module start and init specific logic
         handleDependantModuleForInit(mv, module.packageID, funcName);
         handleParentModuleStart(mv, module.packageID, funcName);
-        // set channel details to strand.
-        setChannelDetailsToStrand(func, localVarOffset, mv, 0);
+        Label tryLabel = new Label();
+        Label catchLabel = new Label();
+        Label handleThrowableLabel = new Label();
+        if ((func.flags & Flags.WORKER) == Flags.WORKER && func.workerChannels.length > 0) {
+            mv.visitTryCatchBlock(tryLabel, catchLabel, handleThrowableLabel, THROWABLE);
+            mv.visitLabel(tryLabel);
+        }
 
         JvmInstructionGen instGen = new JvmInstructionGen(mv, indexMap, module.packageID, jvmPackageGen, jvmTypeGen,
-                jvmCastGen, jvmConstantsGen, asyncDataCollector,
-                types);
+                jvmCastGen, jvmConstantsGen, asyncDataCollector, types);
         JvmErrorGen errorGen = new JvmErrorGen(mv, indexMap, instGen);
         JvmTerminatorGen termGen = new JvmTerminatorGen(mv, indexMap, labelGen, errorGen, module.packageID, instGen,
                 jvmPackageGen, jvmTypeGen, jvmCastGen, jvmConstantsGen, asyncDataCollector);
 
-        generateBasicBlocks(mv, labelGen, errorGen, instGen, termGen, func, returnVarRefIndex,
-                0, localVarOffset, module,
-                attachedType);
+        generateBasicBlocks(mv, labelGen, errorGen, instGen, termGen, func, returnVarRefIndex, channelMapVarIndex,
+                localVarOffset, module, attachedType, sendWorkerChannelNamesVar, receiveWorkerChannelNamesVar);
 
+        if ((func.flags & Flags.WORKER) == Flags.WORKER && func.workerChannels.length > 0) {
+            mv.visitLabel(catchLabel);
+            Label label3 = new Label();
+            mv.visitJumpInsn(GOTO, label3);
+            mv.visitLabel(handleThrowableLabel);
+            mv.visitVarInsn(ASTORE, 2);
+            mv.visitVarInsn(ALOAD, localVarOffset);
+            mv.visitVarInsn(ALOAD, sendWorkerChannelNamesVar);
+            mv.visitVarInsn(ALOAD, 2);
+            mv.visitMethodInsn(INVOKESTATIC, RUNTIME_UTILS, HANDLE_WORKER_PANIC_METHOD, HANDLE_WORKER_PANIC, false);
+            mv.visitVarInsn(ALOAD, 2);
+            mv.visitInsn(ATHROW);
+            mv.visitLabel(label3);
+        }
+        termGen.genReturnTerm(returnVarRefIndex, func, localVarOffset, sendWorkerChannelNamesVar,
+                receiveWorkerChannelNamesVar);
         Label methodEndLabel = new Label();
         mv.visitLabel(methodEndLabel);
-        termGen.genReturnTerm(returnVarRefIndex, func, 0, localVarOffset);
+
+
 
         // Create Local Variable Table
         createLocalVariableTable(func, indexMap, localVarOffset, mv, methodStartLabel, labelGen, methodEndLabel,
                 isObjectMethodSplit);
+
 
         JvmCodeGenUtil.visitMaxStackForMethod(mv, funcName, moduleClassName);
         mv.visitEnd();
@@ -337,19 +314,6 @@ public class MethodGen {
                 MODULE_START_ATTEMPTED, "Z");
     }
 
-    private void setChannelDetailsToStrand(BIRFunction func, int localVarOffset, MethodVisitor mv,
-                                           int invocationVarIndex) {
-        // this channel info is required to notify data channels when there is a panic
-        // we cannot set this during strand creation, because function call do not have this info.
-        if (func.workerChannels.length == 0) {
-            return;
-        }
-        mv.visitVarInsn(ALOAD, localVarOffset);
-        JvmCodeGenUtil.loadChannelDetails(mv, Arrays.asList(func.workerChannels), invocationVarIndex);
-        mv.visitMethodInsn(INVOKEVIRTUAL, STRAND_CLASS, "updateChannelDetails",
-                UPDATE_CHANNEL_DETAILS, false);
-    }
-
     private void genLocalVars(BIRVarToJVMIndexMap indexMap, MethodVisitor mv, List<BIRVariableDcl> localVars) {
         localVars.sort(new FunctionParamComparator());
         for (int i = 1; i < localVars.size(); i++) {
@@ -363,10 +327,80 @@ public class MethodGen {
     }
 
     private int getReturnVarRefIndex(BIRFunction func, BIRVarToJVMIndexMap indexMap, BType retType, MethodVisitor mv) {
-        BIRVariableDcl varDcl = func.localVars.get(0);
+        BIRVariableDcl varDcl = func.localVars.getFirst();
         int returnVarRefIndex = indexMap.addIfNotExists(varDcl.name.value, varDcl.type);
         genDefaultValue(mv, retType, returnVarRefIndex);
         return returnVarRefIndex;
+    }
+
+    private int getWorkerThrowableVarIndex(BIRFunction func, BIRVarToJVMIndexMap indexMap) {
+        if (!func.hasWorkers) {
+            return -1;
+        }
+        return indexMap.addIfNotExists(WORKER_THROWABLE_VAR_NAME, symbolTable.anyType);
+    }
+
+    private int getWorkerChannelMapVarIndex(BIRFunction func, BIRVarToJVMIndexMap indexMap, MethodVisitor mv) {
+        if (!func.hasWorkers) {
+            return -1;
+        }
+        int channelMapVarIndex = indexMap.addIfNotExists(WORKER_CHANNEL_MAP_VAR_NAME, symbolTable.anyType);
+        mv.visitTypeInsn(NEW, WORKER_CHANNEL_MAP);
+        mv.visitInsn(DUP);
+        mv.visitMethodInsn(INVOKESPECIAL, WORKER_CHANNEL_MAP, JVM_INIT_METHOD, VOID_METHOD_DESC, false);
+        mv.visitVarInsn(ASTORE, channelMapVarIndex);
+        return channelMapVarIndex;
+    }
+
+
+    private int getSendWorkerChannelNamesVarIndex(BIRFunction func, BIRVarToJVMIndexMap indexMap, MethodVisitor mv,
+                                                  List<BIRNode.ChannelDetails> sendWorkerChannels) {
+        if (func.workerChannels.length == 0) {
+            return -1;
+        }
+        int sendWorkerChannelNamesVar = indexMap.addIfNotExists(SEND_WORKER_CHANNEL_NAMES_VAR_NAME,
+                symbolTable.anyType);
+        if (sendWorkerChannels.isEmpty()) {
+            mv.visitInsn(ACONST_NULL);
+        } else {
+            int channelSize = sendWorkerChannels.size();
+            mv.visitIntInsn(BIPUSH, channelSize);
+            mv.visitTypeInsn(ANEWARRAY, STRING_VALUE);
+            int count = 0;
+            for (BIRNode.ChannelDetails sendWorkerChannel : sendWorkerChannels) {
+                mv.visitInsn(DUP);
+                mv.visitIntInsn(BIPUSH, count++);
+                mv.visitLdcInsn(sendWorkerChannel.name);
+                mv.visitInsn(AASTORE);
+            }
+        }
+        mv.visitVarInsn(ASTORE, sendWorkerChannelNamesVar);
+        return sendWorkerChannelNamesVar;
+    }
+
+    private int getReceiveWorkerChannelNamesVarIndex(BIRFunction func, BIRVarToJVMIndexMap indexMap, MethodVisitor mv,
+                                                     List<BIRNode.ChannelDetails> receiveWorkerChannels) {
+        if (func.workerChannels.length == 0) {
+            return -1;
+        }
+        int receiveWorkerChannelNamesVar = indexMap.addIfNotExists(RECEIVE_WORKER_CHANNEL_NAMES_VAR_NAME,
+                symbolTable.anyType);
+        if (receiveWorkerChannels.isEmpty()) {
+            mv.visitInsn(ACONST_NULL);
+        } else {
+            int channelSize = receiveWorkerChannels.size();
+            mv.visitIntInsn(BIPUSH, channelSize);
+            mv.visitTypeInsn(ANEWARRAY, STRING_VALUE);
+            int count = 0;
+            for (BIRNode.ChannelDetails sendWorkerChannel : receiveWorkerChannels) {
+                mv.visitInsn(DUP);
+                mv.visitIntInsn(BIPUSH, count++);
+                mv.visitLdcInsn(sendWorkerChannel.name);
+                mv.visitInsn(AASTORE);
+            }
+        }
+        mv.visitVarInsn(ASTORE, receiveWorkerChannelNamesVar);
+        return receiveWorkerChannelNamesVar;
     }
 
     private void genDefaultValue(MethodVisitor mv, BType bType, int index) {
@@ -391,10 +425,10 @@ public class MethodGen {
                 mv.visitVarInsn(DSTORE, index);
             }
             case TypeTags.MAP, TypeTags.ARRAY, TypeTags.STREAM, TypeTags.TABLE, TypeTags.ERROR, TypeTags.NIL,
-                    TypeTags.NEVER, TypeTags.ANY, TypeTags.ANYDATA, TypeTags.OBJECT, TypeTags.CHAR_STRING,
-                    TypeTags.DECIMAL, TypeTags.UNION, TypeTags.RECORD, TypeTags.TUPLE, TypeTags.FUTURE, TypeTags.JSON,
-                    TypeTags.INVOKABLE, TypeTags.FINITE, TypeTags.HANDLE, TypeTags.TYPEDESC, TypeTags.READONLY,
-                    TypeTags.REGEXP -> {
+                 TypeTags.NEVER, TypeTags.ANY, TypeTags.ANYDATA, TypeTags.OBJECT, TypeTags.CHAR_STRING,
+                 TypeTags.DECIMAL, TypeTags.UNION, TypeTags.RECORD, TypeTags.TUPLE, TypeTags.FUTURE, TypeTags.JSON,
+                 TypeTags.INVOKABLE, TypeTags.FINITE, TypeTags.HANDLE, TypeTags.TYPEDESC, TypeTags.READONLY,
+                 TypeTags.REGEXP -> {
                 mv.visitInsn(ACONST_NULL);
                 mv.visitVarInsn(ASTORE, index);
             }
@@ -432,7 +466,8 @@ public class MethodGen {
 
     void generateBasicBlocks(MethodVisitor mv, LabelGenerator labelGen, JvmErrorGen errorGen, JvmInstructionGen instGen,
                              JvmTerminatorGen termGen, BIRFunction func, int returnVarRefIndex,
-                             int invocationVarIndex, int localVarOffset, BIRPackage module, BType attachedType) {
+                             int channelMapVarIndex, int localVarOffset, BIRPackage module, BType attachedType,
+                             int sendWorkerChannelNamesVar, int receiveWorkerChannelNamesVar) {
 
         String funcName = func.name.value;
         BirScope lastScope = null;
@@ -450,11 +485,16 @@ public class MethodGen {
             mv.visitLabel(bbEndLabel);
             BIRTerminator terminator = bb.terminator;
             processTerminator(mv, func, module, funcName, terminator);
-            termGen.genTerminator(terminator, func, funcName, localVarOffset, returnVarRefIndex,
-                    attachedType, invocationVarIndex);
+            termGen.genTerminator(terminator, func, funcName, localVarOffset, returnVarRefIndex, attachedType,
+                    channelMapVarIndex, sendWorkerChannelNamesVar, receiveWorkerChannelNamesVar);
             lastScope = JvmCodeGenUtil.getLastScopeFromTerminator(mv, bb, funcName, labelGen, lastScope,
                     visitedScopesSet);
-            errorGen.generateTryCatch(func, funcName, bb, termGen, labelGen, invocationVarIndex, localVarOffset);
+            errorGen.generateTryCatch(func, funcName, bb, termGen, labelGen, localVarOffset,
+                    sendWorkerChannelNamesVar, receiveWorkerChannelNamesVar);
+            BIRBasicBlock thenBB = terminator.thenBB;
+            if (thenBB != null) {
+                JvmCodeGenUtil.genStrandResume(mv, labelGen, thenBB, funcName, localVarOffset);
+            }
         }
     }
 
@@ -585,7 +625,7 @@ public class MethodGen {
             case TypeTags.HANDLE -> GET_HANDLE_VALUE;
             case TypeTags.TYPEDESC -> GET_TYPEDESC;
             case TypeTags.NIL, TypeTags.NEVER, TypeTags.ANY, TypeTags.ANYDATA, TypeTags.UNION,
-                    TypeTags.JSON, TypeTags.FINITE, TypeTags.READONLY -> GET_OBJECT;
+                 TypeTags.JSON, TypeTags.FINITE, TypeTags.READONLY -> GET_OBJECT;
             case JTypeTags.JTYPE -> InteropMethodGen.getJTypeSignature((JType) bType);
             default -> throw new BLangCompilerException("JVM code generation is not supported for type " +
                     bType);
